--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
       <version>5.9.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.24.2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -81,6 +87,8 @@
         <version>3.1.0</version>
         <executions>
           <execution>
+            <id>TestRigGui</id> <!-- mvn exec:java@TestRigGui -->
+            <phase>none</phase>
             <goals>
               <goal>java</goal>
             </goals>
